--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   margin: 0;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-min-height: 100vh;
+  min-height: 100vh;
 }
 
 h1 {
@@ -65,7 +65,6 @@ button:focus-visible {
 /*Bizim Stiller*/
 form div span {
   visibility: hidden;
-
 }
 
 .error span {
@@ -79,4 +78,12 @@ form div span {
 
 form div {
   margin-top: 15px;
+}
+
+.up {
+  color: greenyellow !important;
+}
+
+.down {
+  color: red !important;
 }
